deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmaker
  template:
    metadata:
      labels:
        app: bookmaker
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bookmaker
          image: ghcr.io/pborges/bookmaker
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
