deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmaker
spec:
  selector:
    app: bookmaker
  ports:
    - name: http
      port: 80
      targetPort: http
